RESOLVED FIXED227563
Fix Gmail hang bug (rdar://79978150) and discard the speculative fix (bug 227554)
https://bugs.webkit.org/show_bug.cgi?id=227563
Summary Fix Gmail hang bug (rdar://79978150) and discard the speculative fix (bug 227...
Yijia Huang
Reported 2021-06-30 20:32:45 PDT
https://bugs.webkit.org/show_bug.cgi?id=227554 This speculative fix actually disables the pattern matches of UBFX, BFI, and SBFIZ. This patch will fix the instruction check failures in testb3 for those instruction pattern matches on ToT.
Attachments
Patch (3.25 KB, patch)
2021-07-01 08:05 PDT, Yijia Huang
no flags
Patch (19.68 KB, patch)
2021-07-05 16:07 PDT, Yijia Huang
no flags
Patch (19.81 KB, patch)
2021-07-05 16:15 PDT, Yijia Huang
no flags
Yijia Huang
Comment 1 2021-07-01 08:05:01 PDT
Yijia Huang
Comment 2 2021-07-05 16:07:10 PDT
Yijia Huang
Comment 3 2021-07-05 16:15:37 PDT
EWS
Comment 4 2021-07-06 10:29:36 PDT
Committed r279593 (239419@main): <https://commits.webkit.org/239419@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432902 [details].
Radar WebKit Bug Importer
Comment 5 2021-07-06 10:30:18 PDT
Note You need to log in before you can comment on or make changes to this bug.